Added some more tx examples

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,13 @@
 		<h2>Enter hash</h2>
 		<input type="text" id="hash">
 		<a class="button" href="#" onclick="javascript:submithash()">Reproduce</a>
-		<p>Try <code>0xd6d519043d40691a36c9e718e47110309590e6f47084ac0ec00b53718e449fd3</code> for example   
+		<p>Examples:
+			<ul>
+				<li><code>0xd6d519043d40691a36c9e718e47110309590e6f47084ac0ec00b53718e449fd3</code> Random token transfer</li>
+				<li><code>0x9dbf0326a03a2a3719c27be4fa69aacc9857fd231a8d9dcaede4bb083def75ec</code> Parity wallet attack
+				<li><code>0x66abc672b9e427447a8a8964c7f4671953fab20571ae42ae6a4879687888c495</code> Jumpdest-analysis attack
+
+			</ul>
 
 		<h2>What is this</h2>
 		<p>
