fix parity stdout/stderr, more stats

--- a/utilities/templates/index.html
+++ b/utilities/templates/index.html
@@ -32,6 +32,8 @@
                     <li> Trace length std dev (last 100): <code>{{ status.stdev }} </code> </li>
                     <li> No of 0-length traces (last 100): <code>{{ status.numZero }} </code> </li>
                     <li> Longest trace (last 100): <code>{{ status.max }} </code> </li>
+                    <li> Deepest depth (last 100): <code>{{ status.maxDepth }} </code> </li>
+                    <li> Avg num Constantinople opcodes (last 100): <code>{{ status.numConst }} </code> </li>
                 </ul>
             </div>
         </div>
