fix #88, process only finished tests

--- a/utilities/templates/index.html
+++ b/utilities/templates/index.html
@@ -34,6 +34,8 @@
                     <li> Longest trace (last 100): <code>{{ status.max }} </code> </li>
                     <li> Deepest depth (last 100): <code>{{ status.maxDepth }} </code> </li>
                     <li> Avg num Constantinople opcodes (last 100): <code>{{ status.numConst }} </code> </li>
+                    <li> Current number of tests running <code>{{ status.activeTests }} </code> </li>
+                    <li> Current number of processes running <code>{{ status.activeSockets }} </code> </li>
                 </ul>
             </div>
         </div>
